syntax = "proto3";

package protochats;

option go_package = "./protochats";

message ChatResponse {
    int32 id = 1;
    string avatar_url = 2;
    string title = 3;
    string type = 4;
}

message MessageResponse {
    int32 id = 1;
    int32 sender_id = 2;
    int32 chat_id = 3;
    string chat_title = 4;
    string chat_avatar_url = 5;
    string chat_type = 6;
    string content = 7;
    string voice_url = 8;
    string circle_url = 9;
    repeated string attachments = 10;
    repeated int32 readed_by = 11;
}

message GetChatByIdRequest {
    int32 id = 1;
    string token = 2;
}

message GetChatsByIdsRequest {
    repeated int32 ids = 1;
    string token = 2;
}

message GetMessagesByIdsRequest {
    repeated int32 ids = 1;
    string token = 2;
}

message GetMessageByIdRequest {
    int32 id = 1;
    string token = 2;
}

message ChatsArrayResponse {
    repeated ChatResponse chats = 1;
}

message MessagesArrayResponse {
    repeated MessageResponse messages = 1;
}

service Chats {
    rpc GetChatById(GetChatByIdRequest) returns (ChatResponse) {}
    rpc GetMessageById(GetMessageByIdRequest) returns (MessageResponse) {}
    rpc GetChatsByIds(GetChatsByIdsRequest) returns (ChatsArrayResponse) {}
    rpc GetMessagesByIds(GetMessagesByIdsRequest) returns (MessagesArrayResponse) {}
}
